flask-tracing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-tracing-ingress
  namespace: apps-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: flask-tracing.tu-dominio.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-tracing-app
                port:
                  number: 80
